Spacing fix

--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -43,6 +43,10 @@ body {
     background: white;
 }
 
+#catselect {
+    margin-bottom: 5px;
+}
+
 button.selected-cat
 {
     margin-right: 5px;
